deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops
  labels:
    appname: devops
spec:
  selector:
    matchLabels:
      appname: devops
  replicas: 2
  template:
    metadata:
      name: devops
      labels:
        appname: devops
    spec:
      containers:
        - name: devops
          image: dongwoo/devops
          imagePullPolicy: Always
          ports:
            - name: port1
              containerPort: 8181
