svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-devops
spec:
  type: NodePort
  selector:
    appname: devops
  ports:
    - name: port-devops
      port: 8080
      targetPort: 80
