ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing-devops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: k8master.localk8s.com
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: svc-devops
              servicePort: 8090
